[package]
name = "cypher_cell"
version = "0.1.0"
edition = "2021"

[lib]
name = "cypher_cell"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
zeroize = { version = "1.7", features = ["derive"] }
cfg-if = "1.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_Memory"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"